--- a/banh.html
+++ b/banh.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chúc Mừng Sinh Nhật Vanh</title>
+  <title>Chúc Mừng Sinh Nhật HUYỀN</title>
   <link rel="stylesheet" href="banh.css" />
 </head>
 <body>
   <div class="banner">
     <button id="giftBtn">🎁 MỞ QUÀ NGAY</button>
-    <div id="hbdText" class="hidden">🎉 CHÚC MỪNG SINH NHẬT VANH 🎉</div>
+    <div id="hbdText" class="hidden">🎉 CHÚC MỪNG SINH NHẬT HUYỀN 🎉</div>
     <div class="slider hidden" style="--quantity: 10">
       <div class="item" style="--position: 1"><img src="images/anh1.jpg" alt="Anh1"></div>
-      <div class="item" style="--position: 2"><img src="images/anh2.jpg" alt="Anh2"></div>
+      <div class="item" style="--position: 2"><img src="images/anh2.JPG" alt="Anh2"></div>
       <div class="item" style="--position: 3"><img src="images/anh3.jpg" alt="Anh3"></div>
       <div class="item" style="--position: 4"><img src="images/anh4.jpg" alt="Anh4"></div>
       <div class="item" style="--position: 5"><img src="images/anh5.jpg" alt="Anh5"></div>
