--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="content">
       <img src="images/avatar.jpg" alt="Avatar" class="avatar" />
       <div class="password-section">
-        <h1>NHẬP PASS ĐI NGƯỜI ĐẸP</h1>
+        <h1>NHẬP PASS ĐI HUYỀN ❤️</h1>
         <input type="text" id="password" placeholder="Enter password" readonly />
         <div class="keypad">
           <button onclick="addNumber('1')">1</button>
