--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -15,12 +15,11 @@
         <div class="envelope-flap"></div>
         <div class="letter" id="letter">
             <h1>Chúc mừng sinh nhật em ❤️</h1>
-            <p>Gửi em: Huyền yêu dấu</p>
+            <p>Huyền yêu dấu!</p>
             <p>Anh chúc em ngày sinh nhật thật vui vẻ, hạnh phúc.</p>
             <p>Mong rằng mỗi bước đi của em đều là thành công.</p>
             <p>Tuổi mới nhiều điều tốt đẹp, nhiều may mắn hơn.</p>
-            <p>Dù có khó khăn, anh sẽ luôn ở đây, cùng em vượt qua tất cả.</p>
-            <p>Yêu EM!</p>
+            <p>Dù có khó khăn, anh sẽ luôn ở đây, cùng em vượt qua tất cả. Yêu Em ❤️</p>
             <p class="signature" id="signature">Với tất cả tình yêu,<br> Hồng </p>
         </div>
     </div>
