--- a/banh.html
+++ b/banh.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chúc Mừng Sinh Nhật HUYỀN</title>
+  <title>HPBD HUYỀN 😘</title>
   <link rel="stylesheet" href="banh.css" />
 </head>
 <body>
