--- a/banh.html
+++ b/banh.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HPBD HUYỀN 😘</title>
+  <title>Gửi Em 😘</title>
   <link rel="stylesheet" href="banh.css" />
 </head>
 <body>
   <div class="banner">
-    <button id="giftBtn">🎁 MỞ QUÀ NGAY</button>
-    <div id="hbdText" class="hidden">🎉 CHÚC MỪNG SINH NHẬT HUYỀN 🎉</div>
+    <button id="giftBtn">🐱 Mở Ngay 🐶</button>
+    <div id="hbdText" class="hidden">💍 LÀM NGƯỜI YÊU ANH NHA 💍</div>
     <div class="slider hidden" style="--quantity: 10">
       <div class="item" style="--position: 1"><img src="images/anh1.jpg" alt="Anh1"></div>
       <div class="item" style="--position: 2"><img src="images/anh2.JPG" alt="Anh2"></div>
