--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="content">
-      <img src="images/avatar.jpg" alt="Avatar" class="avatar" />
+      <img src="images/Avatar.JPG" alt="Avatar" class="avatar" />
       <div class="password-section">
         <h1>NHẬP PASS ĐI HUYỀN ❤️</h1>
         <input type="text" id="password" placeholder="Enter password" readonly />
