--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
           <button onclick="addNumber('7')">7</button>
           <button onclick="addNumber('8')">8</button>
           <button onclick="addNumber('9')">9</button>
+          <button onclick="checkPassword()" class="submit">OK</button>
           <button onclick="addNumber('0')" class="zero">0</button>
           <button onclick="clearPassword()" class="clear">✖</button>
-          <button onclick="checkPassword()" class="submit">✔</button>
       </div>
     </div>
   </div>
