--- a/banh.html
+++ b/banh.html
@@ -22,7 +22,7 @@
       <div class="item" style="--position: 9"><img src="images/anh9.JPG" alt="Anh9"></div>
       <div class="item" style="--position: 10"><img src="images/anh10.JPG" alt="Anh10"></div>
     </div>
-    <img class="cake hidden" src="images/cake.png" alt="Bánh sinh nhật">
+    <img class="cake hidden" src="images/cake.jpg" alt="Bánh sinh nhật">
     <audio id="birthday-audio" src="hpbd.mp3" preload="auto"></audio>
     <canvas id="fireworks"></canvas>
   </div>
