--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -14,13 +14,13 @@
     <div class="envelope closed" id="envelope">
         <div class="envelope-flap"></div>
         <div class="letter" id="letter">
-            <h1>Chúc mừng sinh nhật em ❤️</h1>
+            <h1>I LOVE YOU ❤️</h1>
             <p>Huyền yêu dấu!</p>
-            <p>Anh chúc em ngày sinh nhật thật vui vẻ, hạnh phúc.</p>
-            <p>Mong rằng mỗi bước đi của em đều là thành công.</p>
-            <p>Tuổi mới nhiều điều tốt đẹp, nhiều may mắn hơn.</p>
-            <p>Dù có khó khăn, anh sẽ luôn ở đây, cùng em vượt qua tất cả. Yêu Em ❤️</p>
-            <p class="signature" id="signature">Với tất cả tình yêu,<br> Hồng </p>
+            <p>Cảm ơn em vì đã đến.</p>
+            <p>Nếu như anh có 10 điều may mắn, anh sẽ giành cho em 8.</p>
+            <p>Anh chỉ giữ lại 2. Một là may mắn được quen em. Hai là may mắn được yêu em.</p>
+            <p>Cảm ơn em vì tất cả ❤️ </p>
+            <p class="signature" id="signature">Với tất cả sự chân thành,<br>Đặng Hồng </p>
         </div>
     </div>
     <button class="next-button" id="nextButton">Bấm vào đây 🍀</button>
