--- a/banh.html
+++ b/banh.html
@@ -9,7 +9,7 @@
 <body>
   <div class="banner">
     <button id="giftBtn">🐱 Mở Ngay 🐶</button>
-    <div id="hbdText" class="hidden">💍 LÀM NGƯỜI YÊU ANH NHA 💍</div>
+    <div id="hbdText" class="hidden">💍 THƯƠNG HUYỀN RẤT NHIỀU 💍</div>
     <div class="slider hidden" style="--quantity: 10">
       <div class="item" style="--position: 1"><img src="images/anh1.jpg" alt="Anh1"></div>
       <div class="item" style="--position: 2"><img src="images/anh2.JPG" alt="Anh2"></div>
