--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -23,6 +23,7 @@
             <p class="signature" id="signature">Với tất cả sự chân thành,<br>Đặng Hồng </p>
         </div>
     </div>
+    <button onclick="window.location.href='https://hzsunn.github.io/test'">Bấm vào đây ❤️</button>
     <button class="next-button" id="nextButton">Bấm vào đây 🍀</button>
 
     <script src="sn.js"></script>
