--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -16,14 +16,12 @@
         <div class="letter" id="letter">
             <h1>I LOVE YOU ❤️</h1>
             <p>Huyền yêu dấu!</p>
-            <p>Cảm ơn em vì đã đến.</p>
-            <p>Nếu như anh có 10 điều may mắn, anh sẽ giành cho em 8.</p>
-            <p>Anh chỉ giữ lại 2. Một là may mắn được quen em. Hai là may mắn được yêu em.</p>
+            <p>Cảm ơn em vì đã đến. Anh cảm thấy mình may mắn khi là một phần của em.</p>
+            <p>Dù có khó khăn hãy luôn nhớ có anh ở đây, sẽ luôn cùng em vượt qua.</p>
             <p>Cảm ơn em vì tất cả ❤️ </p>
             <p class="signature" id="signature">Với tất cả sự chân thành,<br>Đặng Hồng </p>
         </div>
     </div>
-    <button onclick="window.location.href='https://hzsunn.github.io/test'">Bấm vào đây ❤️</button>
     <button class="next-button" id="nextButton">Bấm vào đây 🍀</button>
 
     <script src="sn.js"></script>
