--- a/banh.html
+++ b/banh.html
@@ -60,6 +60,9 @@ document.addEventListener('gesturestart', tryPlayMusic); // zoom cảm ứng (Sa
 
 // Optional: click chuột nếu dùng trên desktop
 document.addEventListener('click', tryPlayMusic);
-</script>
+
+    
+    </script>
+     <script src="main.js"></script>
 </body>
 </html>
