--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -18,6 +18,7 @@
             <p>Huyền yêu dấu!</p>
             <p>Cảm ơn em vì đã đến. Anh cảm thấy mình may mắn khi là một phần của em.</p>
             <p>Dù có khó khăn hãy luôn nhớ có anh ở đây, sẽ luôn cùng em vượt qua.</p>
+            <p>Love You</p>
             <p>Cảm ơn em vì tất cả ❤️ </p>
             <p class="signature" id="signature">Với tất cả sự chân thành,<br>Đặng Hồng </p>
         </div>
