--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday</title>
+    <title>Lá Thư Tâm Tình</title>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sn.css">
 </head>
@@ -14,16 +14,17 @@
     <div class="envelope closed" id="envelope">
         <div class="envelope-flap"></div>
         <div class="letter" id="letter">
-            <h1>I LOVE YOU ❤️</h1>
-            <p>Huyền yêu dấu!</p>
-            <p>Cảm ơn em vì đã đến. Anh cảm thấy mình may mắn khi là một phần của em.</p>
-            <p>Dù có khó khăn hãy luôn nhớ có anh ở đây, sẽ luôn cùng em vượt qua.</p>
-            <p>Love You</p>
-            <p>Cảm ơn em vì tất cả ❤️ </p>
-            <p class="signature" id="signature">Với tất cả sự chân thành,<br>Đặng Hồng </p>
+            <h1>Lá Thư Tâm Tình</h1>
+            <p>Thân gửi Trần Việt Anh,</p>
+            <p>Tôi viết thư này để bày tỏ tình cảm chân thành của mình.</p>
+            <p>Bạn là ánh sáng trong cuộc đời tôi, luôn làm tôi mỉm cười.</p>
+            <p>Mỗi khoảnh khắc bên bạn đều là kỷ niệm quý giá tôi trân trọng.</p>
+            <p>Dù có khó khăn, tôi sẽ luôn ở đây, cùng bạn vượt qua tất cả.</p>
+            <p>Love You!</p>
+            <p class="signature" id="signature">Với tất cả tình yêu,<br>Vanh</p>
         </div>
     </div>
-    <button class="next-button" id="nextButton">Bấm vào đây 🍀</button>
+    <button class="next-button" id="nextButton">Đi tiếp 👉</button>
 
     <script src="sn.js"></script>
 </body>
