--- a/banh.html
+++ b/banh.html
@@ -36,7 +36,7 @@
       <canvas id="canvas"></canvas>
     </div>
     <audio id="bgMusic" loop>
-  <source src="img/hpbd.mp3" type="audio/mpeg">
+  <source src="img/hpbd.m4a" type="audio/mpeg">
 </audio>
     <script src="main.js"></script>
 <script>
