--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -15,16 +15,18 @@
         <div class="envelope-flap"></div>
         <div class="letter" id="letter">
             <h1>Lá Thư Tâm Tình</h1>
-            <p>Thân gửi Trần Việt Anh,</p>
-            <p>Tôi viết thư này để bày tỏ tình cảm chân thành của mình.</p>
-            <p>Bạn là ánh sáng trong cuộc đời tôi, luôn làm tôi mỉm cười.</p>
-            <p>Mỗi khoảnh khắc bên bạn đều là kỷ niệm quý giá tôi trân trọng.</p>
-            <p>Dù có khó khăn, tôi sẽ luôn ở đây, cùng bạn vượt qua tất cả.</p>
-            <p>Love You!</p>
-            <p class="signature" id="signature">Với tất cả tình yêu,<br>Vanh</p>
+            <p>Thân gửi Huyền yêu dấu,</p>
+            <p>Anh viết thư này để bày tỏ tình cảm chân thành của anh.</p>
+            <p>Từ lúc quen em tới bây giờ, em là người khiến anh cảm giác như em là tất cả những gì mà anh đang tìm kiếm vậy.</p>
+            <p>Đối với anh, được quen em, được tìm hiểu em là một điều may mắn đối với anh. Không phải ai cũng có duyên để gặp gỡ, trò chuyện. Trong hàng trăm, hàng vạn con người gặp được nhau đã khó. 
+            Huống gì có được may mắn có nhau. Anh tin là dù cho thế nào đi nữa, thứ tình cảm anh giành cho em trước tiên luôn là sự chân thành. 
+            Anh cũng biết mình có thể k phải là những gì mà em cần, nhưng chỉ cần em cho anh cơ hội. Anh sẽ cố gắng hơn nữa.</p>
+            <p>A hi vọng rằng anh sẽ có cơ hội làm điều đó. Thật sự cảm ơn em vì đã xuất hiện, cảm ơn vì tất cả những gì em mang đến.</p>
+            <p>Anh thích em ❤️</p>
+            <p class="signature" id="signature">Với tất cả sự chân thành,<br>Hồng</p>
         </div>
     </div>
-    <button class="next-button" id="nextButton">Đi tiếp 👉</button>
+    <button class="next-button" id="nextButton">Bấm vào đây</button>
 
     <script src="sn.js"></script>
 </body>
